--- a/public/assets/css/kit-custom.css
+++ b/public/assets/css/kit-custom.css
@@ -300,13 +300,13 @@ input.avatar-image {
 Floating Action Btn
 */
 #floating-button {
-    width: 55px;
-    height: 55px;
+    width: 38px;
+    height: 38px;
     border-radius: 50%;
     background: #FF6319;
     position: fixed;
-    bottom: 30px;
-    right: 30px;
+    bottom: 60px;
+    right: 1rem;
     cursor: pointer;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
@@ -322,8 +322,8 @@ Floating Action Btn
     text-align: center;
     padding: 0;
     margin: 0;
-    line-height: 55px;
-    font-size: 38px;
+    line-height: 38px;
+    font-size: 30px;
     font-family: 'Roboto';
     font-weight: 300;
     animation: plus-out 0.3s;
@@ -332,17 +332,16 @@ Floating Action Btn
 
 #container-floating {
     position: fixed;
-    width: 70px;
-    height: 70px;
-    bottom: 30px;
-    right: 30px;
+    width: 38px;
+    height: 38px;
+    bottom: 60px;
+    right: 1rem;
     z-index: 50px;
 }
 
 #container-floating:hover {
-    height: 400px;
-    width: 90px;
-    padding: 30px;
+    height: 200px;
+    width: 38px;
 }
 
 #container-floating:hover .plus {
@@ -422,8 +421,8 @@ Floating Action Btn
 }
 
 .nds {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     border-radius: 50%;
     position: fixed;
     z-index: 300;
@@ -433,8 +432,8 @@ Floating Action Btn
 
 .nd1 {
     background: #3c80f6;
-    right: 40px;
-    bottom: 100px;
+    right: 1rem;
+    bottom: 103px;
     animation-delay: 0.2s;
     animation: bounce-out-nds 0.3s linear;
     animation-fill-mode: forwards;
@@ -443,8 +442,8 @@ Floating Action Btn
 
 .nd3 {
     background: #f0190a;
-    right: 40px;
-    bottom: 150px;
+    right: 1rem;
+    bottom: 147px;
     animation-delay: 0.15s;
     animation: bounce-out-nds 0.15s linear;
     animation-fill-mode: forwards;
@@ -453,8 +452,8 @@ Floating Action Btn
 
 .nd4 {
     background: #308d19;
-    right: 40px;
-    bottom: 200px;
+    right: 1rem;
+    bottom: 190px;
     animation-delay: 0.1s;
     animation: bounce-out-nds 0.1s linear;
     animation-fill-mode: forwards;
