--- a/public/assets/css/kit-custom.css
+++ b/public/assets/css/kit-custom.css
@@ -1,7 +1,14 @@
+/* ------------------------------------------------------------------------------
+ *  Common
+ * ---------------------------------------------------------------------------- */
 .nodisplay {
     display: none;
 }
 
+
+/* ------------------------------------------------------------------------------
+ * Toast message
+ * ---------------------------------------------------------------------------- */
 .toast-msg-wrapper {
     position: fixed;
     top: 0;
@@ -10,6 +17,11 @@
     z-index: 9999999;
 }
 
+
+
+/* ------------------------------------------------------------------------------
+ * Image cropper modal
+ * ---------------------------------------------------------------------------- */
 .box-item {
     width: 48%;
     margin-left: 1%;
@@ -281,16 +293,3 @@ input.avatar-image {
     height: 100%;
     z-index: 99999;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
