--- a/public/assets/css/kit-custom.css
+++ b/public/assets/css/kit-custom.css
@@ -5,6 +5,10 @@
     display: none;
 }
 
+.datepicker {
+    z-index: 10000 !important;
+}
+
 
 /* ------------------------------------------------------------------------------
  * Toast message
